--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,139 @@
-.App {
-  text-align: center;
-}
+.header{
+  color: azure;
+  font-size: larger;
+  background-color: #7098b2;
+  border-radius: 25px;
+  margin: 1px;
+  position: fixed;
+  top: 1px;
+  visibility: visible;
+  right: 1px;
+  left: 1px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  
+} 
+.add-page{
+  margin-top:97px
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.inner-content{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  
+} ul{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  }
+.linko {
+  color:azure;
+  text-decoration: none;
+}
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+.add-content {
+  padding: 50px 0;
+  margin: 0 auto;
+  margin-bottom: 255px;
+  height: 300px;
+  position: relative;
+}
+.add-content>img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1140px;
+}
+.add-content>.titles {
+  position: absolute;
+  color: #fff;
+  width: 80%;
+  left: 10%;
+  bottom: 100px;
+  display: flex;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.add-content .titles h1 {
+  font-size: 48px;
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-content .titles h2 {
+  font-size: 32px;
+  margin: 0;
 }
+
+.add-content .input-wrapper input {
+  width: 80%;
+  height: 46px;
+  line-height: 46px;
+  font-size: 1.1em;
+  color: rgba(0, 0, 0, 0.5);
+  border: none;
+  border-radius: 30px;
+  padding: 10px 20px;
+  position: absolute;
+  bottom: 0;
+  left: 10%;
+  top:200px
+}
+
+.buttonpair{
+  background-color: #437898;
+  width: 150px;
+  height: 350px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+
+}
+.del-button1{
+  background: red;
+    border-radius: 5px;
+    margin-top: 10px;
+    color: black;
+    border: none;
+    margin-left: 0px;
+    margin-right: 6px;
+    width: 55px;
+    height: 25px;
+    cursor: pointer;
+}
+.del-button2{
+  margin-top: 10px;
+
+    background: rgb(41 51 48);
+    border-radius: 5px;
+  
+    color: white;
+    border: none;
+    cursor: pointer;
+    height: 25px;
+  }
+.card{
+  
+  box-shadow: 2px 3px 10px -1px;
+    width: 247px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 25px;
+}
+.card2{
+  height: 605px;
+  box-shadow: 2px 3px 10px -1px;
+  width: 330px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  padding: 25px;
+}
+
